add_executable(ArborX_Example_ExactNearestNeighbor.exe example_exact_nearest_neighbor.cpp)
target_link_libraries(ArborX_Example_ExactNearestNeighbor.exe ArborX::ArborX)
add_test(NAME ArborX_Example_ExactNearestNeighbor COMMAND ArborX_Example_ExactNearestNeighbor.exe)

add_executable(ArborX_Example_ExactNearestNeighborDistances.exe example_exact_nearest_neighbor_distances.cpp)
target_link_libraries(ArborX_Example_ExactNearestNeighborDistances.exe ArborX::ArborX)
add_test(NAME ArborX_Example_ExactNearestNeighborDistances COMMAND ArborX_Example_ExactNearestNeighborDistances.exe)
